# WinePredictionMlops

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: config.py  db.py  main.py  model_deploy.py  simulate_production_data.py  utils.py
