[project]
name = "winepredictionmlops"
version = "0.1.0"
description = "an end to end machine learning project for Red Wine Quality Prediciton with ElasticNet"
license = { file = "LICENSE" }
authors = [
    {name = "Zakaria Jaadi",email = "mr.zakaria.jaadi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scikit-learn (>=1.6.1,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "mlflow (>=2.20.0,<3.0.0)",
    "hyperopt (>=0.2.7,<0.3.0)",
    "deepchecks (>=0.19.1,<0.20.0)",
    "omegaconf (>=2.3.0,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "prefect[docker] (>=3.1.15,<4.0.0)",
    "setuptools (>=75.8.0,<76.0.0)",
    "numpy (<2.0)",
    "notebook (>=7.3.2,<8.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
